--- a/frontend/public_ultra_map.html
+++ b/frontend/public_ultra_map.html
@@ -4,28 +4,23 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Public Ultra Map - Ultramarathon Connect</title>
+    <title>Shared Ultra Map</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
-    <link rel="stylesheet" href="alanai_chatbot/chat-widget.css" />
     <link rel="icon" href="ultra_favicon.ico" type="image/x-icon" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body class="ultra-map-page clean-centered-layout">
-    <main class="ultra-map-hero">
-        <div class="hero-content">
+    <main class="ultra-map-page clean-centered-layout">
+        <section class="ultra-map-hero">
             <h1>📍 Ultra Map for <span id="shared-username">...</span></h1>
             <p>Every ultra-distance run visualized across the globe.</p>
-        </div>
-    </main>
+        </section>
 
-    <main>
-        <div id="ultra-map" style="height: 500px;"></div>
-
-        <div class="ultra-stats-row"
-            style="display: flex; flex-wrap: wrap; gap: 20px; align-items: stretch; margin: 40px 0;">
+        <div class="ultra-stats-row" style="display: flex; flex-wrap: wrap; gap: 20px; align-items: stretch;">
             <div class="ultra-stats-card">
                 <p><strong>Total Ultra Runs:</strong> <span id="ultra-count">0</span></p>
                 <p><strong>Total Distance:</strong> <span id="ultra-distance">0 mi</span></p>
@@ -40,16 +35,30 @@
             </div>
         </div>
 
+        <div id="ultra-map" style="height: 500px; margin-top: 30px;"></div>
+
         <section id="visited-regions" style="margin: 40px 20px;">
             <h2 class="chart-title">🌎 States Where They've Completed Ultras</h2>
             <p><strong>States Completed:</strong> <span id="visited-states-count">0</span></p>
             <ul id="visited-states-list" style="margin-top: 8px; padding-left: 18px;"></ul>
         </section>
 
-        <section id="photo-timeline" style="margin: 40px 20px;">
-            <h2 class="chart-title">📸 Ultra Photo Timeline</h2>
+        <section id="ultra-timeline-section" style="margin: 40px 20px;">
+            <h2 class="chart-title">📈 Ultra Completion Timeline</h2>
+            <div style="position: relative; z-index: 10;">
+                <canvas id="ultraTimelineChart" width="100%" height="60"></canvas>
+            </div>
+        </section>
+
+        <section id="strava-photo-timeline" style="margin: 40px 20px;">
+            <h2 class="chart-title">🖼️ Ultra Photo Timeline</h2>
             <div id="photo-scroll-container" class="photo-scroll"></div>
         </section>
+
+        <p style="text-align:center; margin-top: 50px; font-size: 1.1rem;">
+            Want your own Ultra Map? <a href="index.html" style="color:#0077cc; font-weight: bold;">Join Ultramarathon
+                Connect</a> to connect your Strava and start tracking.
+        </p>
     </main>
 
     <!-- Scripts -->
