Fix public ultra map: move title up, remove duplicate join message, keep external link

--- a/frontend/public_ultra_map.html
+++ b/frontend/public_ultra_map.html
@@ -14,11 +14,14 @@
 </head>
 
 <body class="ultra-map-page clean-centered-layout">
+    <h1 style="text-align: center; margin-top: 40px; font-size: 2rem;">
+        📍 Ultra Map for <span id="shared-username">...</span>
+    </h1>
+    <p style="text-align: center; margin-bottom: 30px;">
+        Every ultra-distance run visualized across the globe.
+    </p>
+
     <main class="ultra-map-page clean-centered-layout">
-        <section class="ultra-map-hero">
-            <h1>📍 Ultra Map for <span id="shared-username">...</span></h1>
-            <p>Every ultra-distance run visualized across the globe.</p>
-        </section>
 
         <div class="ultra-stats-row" style="display: flex; flex-wrap: wrap; gap: 20px; align-items: stretch;">
             <div class="ultra-stats-card">
@@ -54,11 +57,6 @@
             <h2 class="chart-title">🖼️ Ultra Photo Timeline</h2>
             <div id="photo-scroll-container" class="photo-scroll"></div>
         </section>
-
-        <p style="text-align:center; margin-top: 50px; font-size: 1.1rem;">
-            Want your own Ultra Map? <a href="index.html" style="color:#0077cc; font-weight: bold;">Join Ultramarathon
-                Connect</a> to connect your Strava and start tracking.
-        </p>
     </main>
 
     <!-- Scripts -->
