--- a/frontend/public_ultra_map.html
+++ b/frontend/public_ultra_map.html
@@ -17,9 +17,21 @@
     <h1 style="text-align: center; margin-top: 40px; font-size: 2rem;">
         📍 Ultra Map for <span id="shared-username">...</span>
     </h1>
-    <p style="text-align: center; margin-bottom: 30px;">
+    <p style="text-align: center; margin-bottom: 10px;">
         Every ultra-distance run visualized across the globe.
     </p>
+
+    <!-- 💬 Join Message Box -->
+    <div id="join-box"
+        style="text-align: center; max-width: 600px; margin: 20px auto 30px auto; background: #f9f9f9; border: 1px solid #ddd; border-radius: 10px; padding: 15px;">
+        <p style="font-size: 1.1rem; margin: 0;">
+            Want your own Ultra Map?
+            <a href="https://ultramarathonconnect.com" target="_blank" style="color:#0077cc; font-weight: bold;">
+                Join Ultramarathon Connect
+            </a>
+            to connect your Strava and start tracking.
+        </p>
+    </div>
 
     <main class="ultra-map-page clean-centered-layout">
 
